// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar el componete correctamene con la imagen 1`] = `
<img
  alt="Product Img"
  className="productImg undefined"
  src="https://hola.png"
/>
`;

exports[`debe mostrar el componete con el nombre del producto 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Product Img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`debe mostrar el componete con la imagen del producto 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Product Img"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
